syntax="proto3";
package eos.console;

option go_package = "eos.rest.gateway.service";

message TokenAuth {
 string prot = 1;
 string name = 2;
 string host = 3;
}

message TokenEnclosure {
  TokenProto token = 1;
  bytes signature = 2;
  bytes serialized = 3;
  int32 seed = 4;
}

message TokenProto {
  string permission = 1;
  uint64 expires    = 2;
  string owner      = 3;
  string group      = 4;
  uint64 generation = 5;
  string path    = 6;
  bool allowtree = 7;
  string vtoken = 8;
  string voucher = 9;
  string requester = 10;
  repeated TokenAuth origins = 11;
}

